--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ model-viewer {
   background-color: #ffffff;
 }
 
+.imgSmall {
+  width: 150px;
+}
+
 .Hotspot {
   background: #fff;
   border-radius: 32px;
@@ -64,7 +68,7 @@ model-viewer {
   font-size: 18px;
   font-weight: 700;
   left: calc(100% + 1em);
-  max-width: 128px;
+  max-width: 180px;
   overflow-wrap: break-word;
   padding: 0.5em 1em;
   position: absolute;
