--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,20 @@ model-viewer {
   width: max-content;
 }
 
+.btns {
+  position: absolute;
+  bottom: 100px;
+  text-align: center;
+  width:100%;
+}
+
+.Hotspot-Btn{
+  width:50px;
+  height:40px;
+  border: none;
+  background-color: white;
+}
+
 .Hotspot:not([data-visible]) > * {
   opacity: 0;
   pointer-events: none;
