--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,8 @@ model-viewer {
   height:40px;
   border: none;
   background-color: white;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .Hotspot:not([data-visible]) > * {
